--- a/stoplights.css
+++ b/stoplights.css
@@ -35,12 +35,15 @@
 
 .red-stoplight.active {
     background-color: red;
+    box-shadow: 0px 0px 32px 7px red;
 }
 
 .yellow-stoplight.active {
     background-color: orange;
+    box-shadow: 0px 0px 32px 7px orange;
 }
 
 .green-stoplight.active {
     background-color: limegreen;
+    box-shadow: 0px 0px 32px 7px limegreen;
 }
